# realtime-logpolar-filtering

./: .clang-format  .cproject  .project  Benchmark.cu  Benchmark.h  CMAkeLists.txt  CMakeLists.txt  CMakePresets.json  Image.cpp  Image.cu  LPBilinear.cpp  LPBilinear.h  LPBilinearGpu.cu  LPBilinearGpu.h  LPBilinearGpuKernel.cu  LPBilinearGpuKernel.h  LPBocl.cpp  LPWilson.cpp  LPWilson.h  LPWilsonGpu.cu  LPWilsonGpuKernel.cu  LPWilsonGpuKernel.h  LogPolar.cpp  LogPolar.h  Makefile  README.md  Run.cpp  Viewer.cpp  Viewer.h  out
include/rtlp/benchmark/: Benchmark.h  Benchmark.hpp
include/rtlp/core/: Image.h  Image.hpp
include/rtlp/kernels/: LPBilinearGpuKernel.hpp  LPWilsonGpuKernel.hpp
include/rtlp/processing/: LPBilinear.h  (+9 more)
source/: Benchmark.cu  Image.cu  Image.h  LPBilinear.h  LPBilinearGpu.cu  LPBilinearGpuKernel.cu  LPBilinearGpuKernel.h  LPBocl.h  LPBoclKernel.cl  LPWilsonGpu.cu  LPWilsonGpu.h  LPWilsonGpuKernel.cu  LPWilsonGpuKernel.h  LogPolar.h  Makefile  Viewer.h
src/: Benchmark.cu  Benchmark.h  Image.cu  Image.h  LPBilinear.cpp  LPBilinear.h  LPBilinearGpu.cu  LPBilinearGpu.h  LPBilinearGpuKernel.cu  LPBilinearGpuKernel.h  LPWilson.cpp  LPWilson.h  LPWilsonGpu.cu  LPWilsonGpu.h  LPWilsonGpuKernel.cu  LPWilsonGpuKernel.h  LogPolar.cpp  LogPolar.h  Run.cpp  VideoProcessor.cpp  VideoProcessor.h  Viewer.cpp  Viewer.h
src/benchmark/: Benchmark.cu
src/core/: Image.cu
src/kernels/: LPBilinearGpuKernel.cu  LPWilsonGpuKernel.cu
src/processing/: LPBilinear.cpp  LPBilinearGpu.cu  LPWilson.cpp  LPWilsonGpu.cu  LogPolar.cpp
src/video/: VideoProcessor.cpp
(+2 files in other folders)
